tests/NormalTests/paczka1/small_fuzzy/10079186.err
Error in line 2: uW8ZGc8I S382 77,6
Error in line 10: 6wjJHcOW S865 52,9
Error in line 11: 6wjJHcOW S382 13,4
